samples/errors/001-unresolved-var.ooc

main: func {

    unknown = 3
    
}
